--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<!-- Hero Section -->
 <section class="hero bg-light d-flex flex-column justify-content-center align-items-center text-center">
     <div class="container">
         <h1 class="display-3 fw-bold text-dark">🍲 Recipe Finder</h1>
@@ -37,7 +38,7 @@
     </div>
 </section>
 
-
+<!-- Recipe Results Section -->
 <section class="recipes py-5">
     <div class="container">
         <h2 class="mb-5 text-center fw-bold">Your Recipes</h2>
@@ -47,13 +48,14 @@
     </div>
 </section>
 
+<!-- Footer -->
 <footer class="footer bg-dark text-light py-3 text-center">
     <div class="container">
-        <p class="mb-0">© 2025 Recipe Finder. Built By AFMTC.</p>
+        <p class="mb-0">© 2025 Recipe Finder. Built with ❤️ in Silicon Valley.</p>
     </div>
 </footer>
 
-
+<!-- Custom JS -->
 <script src="app.js"></script>
 </body>
 </html>
